--- a/css/menuLayout.css
+++ b/css/menuLayout.css
@@ -21,6 +21,11 @@
 	
 }
 
+pre {
+	font-family: Montserrat;
+    font-weight: 400;
+}
+
 @media (max-width:700px) {
 	
 	.MenuRow{
